--- a/nginx-config/app.conf
+++ b/nginx-config/app.conf
@@ -24,6 +24,11 @@ server {
     proxy_read_timeout 300s;
     proxy_connect_timeout 75s;
     client_max_body_size 200M;
+    client_body_buffer_size 200M;
+
+    proxy_request_buffering off;
+    proxy_buffering off;
+    proxy_http_version 1.1;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
